--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
   <script src="components/angular/angular-animate.js"></script>
   <script src="components/angular/angular-route.js"></script>
+  <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script src="components/ui-bootstrap-tpls-1.2.5.js"></script>
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
