--- a/index.html
+++ b/index.html
@@ -18,20 +18,27 @@
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+  <link rel="stylesheet" href="app.css">
 </head>
 <body>
-  <ul class="menu">
-    <li><a href="#/view1">Converter</a></li>
+	
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Direct Exchange</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li><a href="#/view1">Converter</a></li>
     <li><a href="#/view2">History</a></li>
-  </ul>
+    </ul>
+  </div>
+</nav>
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
   <div ng-view></div>
-
-  <div>Direct Exchange: v<span app-version></span></div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
