--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a class="navbar-brand" href="#">Direct Exchange</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="#/view1">Converter</a></li>
+      <li><a href="#/conversion">Converter</a></li>
     <li><a href="#/view2">History</a></li>
     </ul>
   </div>
@@ -50,8 +50,8 @@
   <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
   <script src="components/ui-bootstrap-tpls-1.2.5.js"></script>
   <script src="app.js"></script>
-  <script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script>
+  <script src="ConversionController/conversionCtrl.js"></script>
+  <script src="HistoricalController/historicalCtrl.js"></script>
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
