--- a/ConversionController/conversion.html
+++ b/ConversionController/conversion.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-	<i class="fa fa-money fa-5x" aria-hidden="true"></i>
+	<!--<i class="fa fa-money fa-5x" aria-hidden="true"></i> -->
 	<div class="well">
 		<div class="row">
 			<div class="col-lg-12 display">
