--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <ul class="nav navbar-nav">
       <li><a href="#/conversion">Converter</a></li>
-    <li><a href="#/view2">History</a></li>
+    <li><a href="#/historical">History</a></li>
     </ul>
   </div>
 </nav>
