Updated Date Picker

--- a/ConversionController/conversion.html
+++ b/ConversionController/conversion.html
@@ -67,5 +67,12 @@
          
       </div><!-- /.row -->
    </form>
+	</div>
+</div>
    </div>
+     	<div class="col-lg-12 page-footer">
+		<footer role="contentinfo">
+			<p data-ng-model="footer_text" data-ng-cloak>{{ footer_text }}</p>
+		</footer>
+	</div>
 </div>
