Added icon to logo area

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Direct Exchange</a>
+      <a class="navbar-brand" href="#">Direct <i class="fa fa-money fa-1x" aria-hidden="true"></i> Exchange</a>
     </div>
     <ul class="nav navbar-nav">
       <li><a href="#/conversion">Converter</a></li>
