Imported google fonts

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="components/html5-boilerplate_v5/css/normalize.css">
   <link rel="stylesheet" href="components/html5-boilerplate_v5/css/main.css">
   <link rel="stylesheet" href="app.css">
+  <link href='https://fonts.googleapis.com/css?family=Sigmar+One' rel='stylesheet' type='text/css'>
   <script src="components/html5-boilerplate_v5/js/vendor/modernizr-2.8.3.min.js"></script>
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -28,7 +29,7 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="#/conversion">Direct <i class="fa fa-money fa-1x" aria-hidden="true"></i> Exchange</a>
     </div>
-    <ul class="nav navbar-nav">
+    <ul class="nav navbar-nav pull-right">
       <li><a href="#/conversion">Converter</a></li>
     <li><a href="#/historical">History</a></li>
     </ul>
