Added link to the user guide

--- a/footer.html
+++ b/footer.html
@@ -9,7 +9,7 @@
 					·
 					<a href="#/historical">History</a>
 					·
-					<a href="#/userguide">Help (User Guide)</a>
+					<a href="http://miramollar.com/cmsc495/guide.html">Help (User Guide)</a>
 				</p>
 
 				<p class="footer-company-name">{{ footer_text }}</p>
