fixed menu on smaller screens

--- a/index.html
+++ b/index.html
@@ -24,7 +24,29 @@
 </head>
 <body>
 	
-<nav class="navbar navbar-inverse">
+
+<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+	<div class="container">
+         <div class="navbar-header">
+	          <a class="navbar-brand" href="#/conversion">Direct <i class="fa fa-money fa-1x" aria-hidden="true"></i> Exchange</a>
+		 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#de-nav">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+	</div>
+	
+
+    <div class="collapse navbar-collapse pull-right" id="de-nav">
+		<ul class="nav navbar-nav">
+			<li><a href="#/conversion">Converter</a></li>
+			<li><a href="#/historical">History</a></li>
+		</ul>
+	</div>
+</nav>
+	
+<!--<nav class="navbar navbar-inverse" id="de-nav">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#/conversion">Direct <i class="fa fa-money fa-1x" aria-hidden="true"></i> Exchange</a>
@@ -34,7 +56,7 @@
     <li><a href="#/historical">History</a></li>
     </ul>
   </div>
-</nav>
+</nav> -->
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
